...

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/hidious"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/insidious"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"
            android:layout_alignParentRight="false"
            />
        <androidx.appcompat.widget.AppCompatTextView
...
